style: Update gradient format --trying to debug strange issue where gradient looks off only on iphone safari

--- a/client/src/components/SheltersCard/SheltersCard.scss
+++ b/client/src/components/SheltersCard/SheltersCard.scss
@@ -135,7 +135,7 @@ h3 {
   border-radius: 10px;
   border: 1px solid ghostwhite;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
 
   @include mobile {
     // display: contents;      // CULPRIT #2 - fixed
@@ -799,7 +799,32 @@ h3 {
 
 .mobile__shelter-item__availability {
   padding: 0.6rem;
-  background-image: linear-gradient(135deg, #6d5dfc 0%, #c692ecdd 100%);
+  background-image: linear-gradient(
+    135deg,
+    #6d5dfc 0%,
+    rgba(198, 146, 236, 0.87) 100%
+  );
+  background-image: -webkit-linear-gradient(
+    135deg,
+    #6d5dfc 0%,
+    rgba(198, 146, 236, 0.87) 100%
+  );
+  background-image: -moz-linear-gradient(
+    135deg,
+    #6d5dfc 0%,
+    rgba(198, 146, 236, 0.87) 100%
+  );
+  background-image: -o-linear-gradient(
+    135deg,
+    #6d5dfc 0%,
+    rgba(198, 146, 236, 0.87) 100%
+  );
+  background-image: -ms-linear-gradient(
+    135deg,
+    #6d5dfc 0%,
+    rgba(198, 146, 236, 0.87) 100%
+  );
+
   border-radius: 12px;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
   margin-bottom: 1rem;
